[package]
name = "papm"
version = "0.2.0"
authors = ["Paulo Evangelista"]
categories = ["command-line-utilities"]
edition = "2021"
include = [
  "src/**/*",
]
keywords = ["password", "manager", "pao", "store"]
license = "Unlicense"
repository = "https://github.com/paulo-evangelista"
rust-version = "1.77.2"
description = """
Pauleradixz's password manager!
"""

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }

[[bin]]
name = "papm"
path = "src/main.rs"
