[package]
name = "papm"
version = "0.3.2"
authors = ["Paulo Evangelista"]
categories = ["command-line-utilities"]
edition = "2021"
include = [
  "src/**/*",
]
keywords = ["password", "manager", "pao", "store"]
license = "Unlicense"
repository = "https://github.com/paulo-evangelista/papm"
rust-version = "1.77.2"
description = """
Pauleradixz's password manager!
"""

[dependencies]
argon2 = "0.5.3"
clap = { version = "4.5.4", features = ["derive", "env"] }
rand = "0.8.5"

[[bin]]
name = "papm"
path = "src/main.rs"
